bug(donate-page): Add bottom spacing between footer and the form

--- a/pages/causes/[slug]/donate/donate.module.scss
+++ b/pages/causes/[slug]/donate/donate.module.scss
@@ -4,6 +4,7 @@
 .donate {
   background: $color-primary-light;
   min-height: calc(100vh - 300px);
+  padding-bottom: 2rem;
   display: flex;
   justify-content: center;
   &__body {
@@ -20,6 +21,7 @@
     &__form {
       background: #fff;
       padding: 2rem 4rem;
+      margin: 4rem 0;
       border: 0.5px solid rgba(158, 153, 153, 0.3);
       border-radius: 5px;
       margin-top: 2rem;
@@ -36,23 +38,23 @@
           margin-bottom: 1rem;
         }
       }
-      &__successful{
-        h4{
+      &__successful {
+        h4 {
           font-weight: 600;
           text-align: center;
           margin-bottom: 8rem;
           font-size: 32px;
         }
-        h5{
+        h5 {
           text-align: center;
           font-size: 20px;
           font-weight: bold;
         }
-        &__subtitle{
+        &__subtitle {
           font-size: 12px;
           text-align: center;
         }
-        a{
+        a {
           font-size: 14px;
           font-weight: 500;
           text-decoration: underline;
@@ -60,29 +62,30 @@
           display: block;
           margin: 2rem 0;
         }
-        span{
+        span {
           font-weight: 500;
           font-size: 14px;
           color: $color-dark;
         }
-        &__share{
+        &__share {
           display: flex;
           justify-content: center;
           width: 100%;
           margin: 1rem auto;
-          span, img{
+          span,
+          img {
             margin-right: 1rem;
           }
-          a{
+          a {
             margin: 0;
           }
         }
-        &__rate{
+        &__rate {
           display: flex;
           justify-content: center;
           width: 100%;
           margin: 2rem 0;
-          span{
+          span {
             margin-right: 0.5rem;
           }
         }
@@ -97,33 +100,33 @@
     }
   }
 
-  @include mediaMd{
+  @include mediaMd {
     padding: 1rem;
-    &__body{
+    &__body {
       width: 100%;
-      &__header{
+      &__header {
         text-align: left;
-        h4{
+        h4 {
           font-size: 20px;
         }
       }
-      &__form{
+      &__form {
         padding: 1rem;
-        &__header{
-          h6{
+        &__header {
+          h6 {
             font-size: 18px;
             font-weight: 500;
           }
         }
-        &__successful{
-          h5{
+        &__successful {
+          h5 {
             font-size: 20px;
             font-weight: 700;
           }
         }
       }
     }
-    &__confirmationModal{
+    &__confirmationModal {
       h4 {
         font-size: 18px;
       }
